style: announcements card border and spacing + fix border radius of announcements and trending cards

--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ article {
   cursor: pointer;
 }
 
-/* === announcements card ===  */
+/* === announcements card  and trending card ===  */
 .announcements {
   grid-area: 1 / 2 / 2 / 3;
 }
@@ -268,15 +268,16 @@ article {
   background-color: var(--white);
 }
 
-.announcement-card,
-.trending-card {
-  background: var(--white);
-  padding: 30px 25px ;
-  border-radius: 13px;
+.announcement-cards {
+  padding: 20px 40px;
 }
 
 .announcement-card {
-  padding-top: 20px;
+  border-bottom: 1px solid var(--pink);
+  padding-block: 20px;
+}
+.announcement-card:last-child {
+  border-bottom: 0;
 }
 
 .content-heading,
